// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Role resolver createRole 1`] = `
Object {
  "code": "test",
  "description": "test role",
  "id": "3",
  "permissions": Array [
    "ReadCustomer",
    "UpdateCustomer",
  ],
}
`;

exports[`Role resolver updateRole 1`] = `
Object {
  "code": "test-modified",
  "description": "test role modified",
  "id": "3",
  "permissions": Array [
    "ReadCustomer",
    "UpdateCustomer",
    "DeleteCustomer",
  ],
}
`;
